Move social links to the right

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -46,6 +46,7 @@
     grid-template-columns: 1fr 2fr;
     gap: 3rem;
     margin-bottom: 2rem;
+   align-items: flex-start;
   }
 
   .footer-brand h3 {
@@ -64,6 +65,8 @@
   .social-links {
     display: flex;
     gap: 1rem;
+   margin-left: auto;
+   align-self: flex-end;
   }
 
   .social-link {
