--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,16 +9,10 @@
       <p class="section-subtitle">
         Checkout how Consultologist AI can make consults for you.
       </p>
-    </div>
-    
-    <div class="input-container">
-      <input 
-        type="text" 
-        class="text-input" 
-        placeholder="Enter your email to get started"
-      />
-      <button class="input-button">Get Started</button>
-    </div>
+    <label for="comments">Comments:</label>
+<textarea id="comments" name="comments" rows="4" cols="50">
+Enter your comments here
+</textarea>
     
   </div>
 </section>
