--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -9,7 +9,9 @@
       <p class="section-subtitle">
         Checkout how Consultologist AI can make consults for you.
       </p>
+  </div>
     
+  <div class="container">
     <textarea id="comments" name="comments" rows="4" cols="50">
       Enter your comments here
     </textarea>
