--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -11,7 +11,7 @@
       </p>
   </div>
     
-  <div class="container">
+  <div class="container" align="center">
     <textarea id="comments" name="comments" rows="4" cols="50">
       Enter your comments here
     </textarea>
