--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -15,6 +15,10 @@
     <textarea id="comments" name="comments" rows="4" cols="50">
       Enter your comments here
     </textarea>
+
+    <br />
+
+    <button type="button">Click Me!</button>
     
   </div>
 </section>
