--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -18,7 +18,7 @@
 
     <br />
 
-    <button type="button">Click Me!</button>
+    <button type="button">Send to Consultologist</button>
     
   </div>
 </section>
