--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -18,7 +18,7 @@
 
     <br />
 
-    <button type="button">Send to Consultologist</button>
+    <button type="button" id="consultologist-send">Send to Consultologist</button>
 
     <br />
 
