--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -12,8 +12,7 @@
   </div>
     
   <div class="container" align="center">
-    <textarea id="comments" name="comments" rows="4" cols="50">
-    </textarea>
+    <textarea id="comments" name="comments" rows="4" cols="50" />
 
     <br />
 
