--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -465,7 +465,7 @@
         </div>
       `;
 
-      console.log("Going into Try Catch statement")
+      console.log("Going into Try Catch statement");
 
       try {
         const response = await fetch('/api/chat', {
