--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -1,6 +1,7 @@
 ---
 import Header from '../components/Header.astro';
 import Contact from '../components/Contact.astro';
+import Footer from '../components/Footer.astro';
 ---
 
 <!doctype html>
