--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -47,7 +47,7 @@
     </div>
     
     <div class="cta-section">
-      <a href="#contact" class="cta-button">Try it free - save 4+ hours every week</a>
+      <a href="/demo" class="cta-button">Try it free - save 4+ hours every week</a>
     </div>
   </div>
 </section>
