--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,7 @@
     </div>
     
     <div class="nav-cta">
-      <a href="#contact" class="cta-button">Try it free</a>
+      <a href="/demo" class="cta-button">Try it free</a>
     </div>
     
     <div class="nav-toggle" id="nav-toggle">
