--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -16,7 +16,7 @@
       </div>
       
       <div class="hero-buttons">
-        <a href="#contact" class="btn btn-primary">Try Consultologist Free - Save 4+ Hours/Week</a>
+        <a href="/demo" class="btn btn-primary">Try Consultologist Free - Save 4+ Hours/Week</a>
       </div>
     </div>
   </div>
