--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
     <div class="nav-brand">
       <a href="/" class="brand-link">
         <span class="brand-text">Consultologist</span>
-      </a>
+      </alkISERJtg;fidh'oibgadfk;eneatr;negnjtbngh
     </div>
     
     <div class="nav-menu" id="nav-menu">
