--- a/src/pages/demo.astro
+++ b/src/pages/demo.astro
@@ -1,8 +1,5 @@
 ---
 import Header from '../components/Header.astro';
-import Hero from '../components/Hero.astro';
-import About from '../components/About.astro';
-import Services from '../components/Services.astro';
 import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 ---
@@ -25,9 +22,7 @@ import Footer from '../components/Footer.astro';
   <body>
     <Header />
     <main>
-      <Hero />
-      <About />
-      <Services />
+      <Contact />
     </main>
     <Footer />
   </body>
