--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -25,7 +25,7 @@
           <a href="#blog" class="nav-link">Blog</a>
         </li>
         <li class="nav-item">
-          <a href="#signin" class="nav-link">Sign in</a>
+          <a href="https://app.consultologist.ai" class="nav-link">Sign in</a>
         </li>
       </ul>
     </div>
