--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,9 @@
           <a href="#features" class="nav-link">Features</a>
         </li>
         <li class="nav-item">
+          <a href="#pricing" class="nav-link">Pricing</a>
+        </li>
+        <li class="nav-item">
           <a href="#blog" class="nav-link">Blog</a>
         </li>
         <li class="nav-item">
