Rebrand to Consultologist.

--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -23,8 +23,9 @@
 				<div class="step-number">1</div>
 				<h3 class="step-title">Send referral package</h3>
 				<p class="step-description">
-					Fax the referral package to your unique CleverConsult number
-					and have your MOA send out a custom patient questionnaire.
+					Fax the referral package to your unique Consultologist
+					number and have your MOA send out a custom patient
+					questionnaire.
 				</p>
 			</div>
 
@@ -39,7 +40,7 @@
 				<div class="step-number">2</div>
 				<h3 class="step-title">Our AI drafts the note</h3>
 				<p class="step-description">
-					CleverConsult creates your consult note by transforming the
+					Consultologist creates your consult note by transforming the
 					data from the referral package and patient questionnaire.
 				</p>
 			</div>
